test/bad/missing_http_method.veld
// BAD: missing required method field on action
model User { id: string }

module Test {
  action Oops {
    path:    /test
    output:  User
  }
}
